May 26, 2009:
    merge from kaio.git
        -- add zh_TW.po, zh_HK.po; remove unused module in engine/table.py

May 1, 2009:
    allow the create_engine to fail, so that ibus won't hang due to
    ibus-table failure.

Apr 30, 2009:
    add sigterm handler to sync userdb

Apr 29, 2009:
    redirect stdout,stderr to debug.log; readd arrow_up, arrow_down for
    candidates selection.

Apr 24, 2009:
    remove id colomun from user_db.desc.

Apr 22, 2009:
    add id key in db to allow better phrase ordering.
    #####################################################################
    # Users need to regenerate the .db files. by recompile ibus-table-* #
    #####################################################################